objects/Broker_Import_2_50__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Name of Entity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City of Entity Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County of Entity Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Entity Email Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_ID__c</fullName>
        <description>Corresponding Entity Identifier</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Entity ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <description>Type of the Entity (SB, AG, GP,FSP)</description>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>FSP</fullName>
                </value>
                <value>
                    <fullName>GP</fullName>
                </value>
                <value>
                    <fullName>SB</fullName>
                </value>
                <value>
                    <fullName>PDB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name when Entity Type is SB</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name when Entity type is SB</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPN_Number__c</fullName>
        <description>Entity Description. Mostly it has National Producer Number (NPN)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NPN Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Entity Phone Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box will be check after the record has been processed and inserted or updated to respective destination</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <description>Status of Entity (newly inseterd/added or updated)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <description>Date when file produced</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State of Entity Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <description>Combination of Entity Type and Entity Identifier</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unique ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <description>Zipcode of Entity Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zipcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <description>Holds the Broker Activity data</description>
    <label>Broker Import 2-50</label>
    <nameField>
        <displayFormat>BI2-50-{00000}</displayFormat>
        <label>Broker Import 2-50  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Import_2_50</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Entity_ID__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Processed__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NPN_Number__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Processed_All</fullName>
        <columns>NAME</columns>
        <columns>Entity_ID__c</columns>
        <columns>Processed__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Run_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NPN_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Processed - All</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Processed_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Entity_ID__c</columns>
        <columns>Processed__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NPN_Number__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>SB</value>
        </filters>
        <label>Not Processed - Contacts</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Processed_Partners</fullName>
        <columns>NAME</columns>
        <columns>Entity_ID__c</columns>
        <columns>Processed__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NPN_Number__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Entity_Type__c</field>
            <operation>notEqual</operation>
            <value>SB</value>
        </filters>
        <label>Not Processed - Partners</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processed_All</fullName>
        <columns>NAME</columns>
        <columns>Entity_ID__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Processed__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NPN_Number__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Processed - All</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processed_Contacts_Only</fullName>
        <columns>NAME</columns>
        <columns>Entity_ID__c</columns>
        <columns>Processed__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NPN_Number__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Email__c</columns>
        <columns>Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>SB</value>
        </filters>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Processed - Contacts Only</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processed_Partner_Accounts_Only</fullName>
        <columns>NAME</columns>
        <columns>Entity_ID__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Processed__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NPN_Number__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Email__c</columns>
        <columns>Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>AG,FSP,GP</value>
        </filters>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Processed - Partner Accounts Only</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>BRK_001</fullName>
        <active>false</active>
        <description>This rule makes Account Name field required if the Entity Type is either FSP , GP or AG</description>
        <errorConditionFormula>AND( ISBlank(Account_Name__c),
     OR( ISPICKVAL(Entity_Type__c,'AG'),
         ISPICKVAL(Entity_Type__c,'GP'),
        ISPICKVAL(Entity_Type__c,'FSP')

   ))</errorConditionFormula>
        <errorDisplayField>Account_Name__c</errorDisplayField>
        <errorMessage>BRK 001: Missing Account Name for Import records with either AG,GP or FSP as the entity Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BRK_002</fullName>
        <active>false</active>
        <description>This rule prevents against accepting records that are not of Entity Types either FSP , GP , AG or FSP</description>
        <errorConditionFormula>NOT(OR( ISPICKVAL(Entity_Type__c,'AG'),
        ISPICKVAL(Entity_Type__c,'GP'),
        ISPICKVAL(Entity_Type__c,'FSP'),
        ISPICKVAL(Entity_Type__c,'SB')

   ))</errorConditionFormula>
        <errorDisplayField>Account_Name__c</errorDisplayField>
        <errorMessage>BRK 002: The only accepted entity types are AG,GP,FSP or SB</errorMessage>
    </validationRules>
</CustomObject>